--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-    "name": "jquery.nicefileinput",
+    "name": "alterebro/jQuery.NiceFileInput.js",
     "version": "1.0.0",
     "main": "jquery.nicefileinput.min.js",
     "description": "jQuery Plugin which makes file input CSS styling an easy task.",
